--- a/themes/hugo-academic/i18n/en.yaml
+++ b/themes/hugo-academic/i18n/en.yaml
@@ -70,7 +70,7 @@
 # About widget
 
 - id: interests
-  translation: Interests
+  translation: Research interests
 
 - id: education
   translation: Education
