--- a/content/publication/TMHMC/cite.bib
+++ b/content/publication/TMHMC/cite.bib
@@ -1,6 +1,8 @@
 @article{osmundsen2019_TMHMC,
   title={Importance Sampling-based Transport Map Hamiltonian Monte Carlo for Bayesian Hierarchical Models},
   author={Osmundsen, Kjartan Kloster and Kleppe, Tore Selland and Liesenfeld, Roman},
-  journal={arXiv preprint arXiv:1812.07929},
-  year={2019}
+  journal={Journal of Computational and Graphical Statistics},
+  pages={1--32},
+  year={2021},
+  publisher={Taylor \& Francis}
 }
