--- a/content/publication/Storage/cite.bib
+++ b/content/publication/Storage/cite.bib
@@ -1,6 +1,10 @@
-@article{osmundsen2020_Storage,
+@article{osmundsen2021estimating,
   title={Estimating the Competitive Storage Model with Stochastic Trends in Commodity Prices},
   author={Osmundsen, Kjartan Kloster and Kleppe, Tore Selland and Liesenfeld, Roman and Oglend, Atle},
-  journal={arXiv preprint arXiv:2001.03984},
-  year={2020}
+  journal={Econometrics},
+  volume={9},
+  number={4},
+  pages={40},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
 }
